--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -1,26 +1,3 @@
-/*
-
-My Custom CSS
-=============
-
-Author:  Brad Hussey
-Updated: August 2013
-Notes:	 Hand coded for Udemy.com
-
-*/
-
-
-/* --------------------------------------
-   Layout
-   -------------------------------------- */
-
-
-
-/* --------------------------------------
-   Typography
-   -------------------------------------- */
-
-
 
 /* --------------------------------------
    Navbar
@@ -43,13 +20,14 @@ padding-right: 300px;
    min-height:500px;
    margin-top: 90px;
 }
+/* --------------------------------------
+   callout
+   -------------------------------------- */
 #call{
 width: 300px;
 }
-
-
 /* --------------------------------------
-   Global Styles
+    Styles
    -------------------------------------- */
 #featuresheading{
   font-family: sans-serif;
@@ -63,22 +41,13 @@ width: 300px;
   margin:0 0 20px;
 
 }
-
-/* --------------------------------------
-   Media Queries
-   -------------------------------------- */
-
-/* Portrait & landscape phone */
-@media (max-width: 480px) {
-
-}
-
-/* Landscape phone to portrait tablet */
-@media (max-width: 768px) {
-
-}
-
-/* Large desktop */
-@media (min-width: 1200px) {
-
-}
+footer{
+     background: #333;
+     color: #eee;
+     font-size: 11px;
+     padding: 20px;
+   }
+   ul.unstyled{
+     list-style: none;
+     padding: 0px;
+   }
